@startuml

title __APPSERVER's Class Diagram__\n

  package  {
    interface IDataLayer {
    }
  }
  

  package  {
    class JspClass {
    }
  }
  

  package  {
    class RestClient {
    }
  }
  

  package  {
    class RoutingServer {
    }
  }
  

  package  {
    class ServerLogic {
    }
  }
  

  JspClass -up-|> HttpJspPage
  RoutingServer -up-|> Application
  ServerLogic -up-|> IDataLayer
  ServerLogic -up-|> Serializable
  ServerLogic -up-|> Remote
  ServerLogic o-- IDataLayer : stub


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
